# dse.fmi

./: .gitignore  CONTRIBUTING.md  Makefile  Metadata.yml  NOTICE  README.md  Taskfile.yml
.github/linters/: .golangci.yml
.github/workflows/: ci.yaml  dependabot.yaml  super-linter.yml
doc/: Makefile
doc/content/apis/fmi/: _index.md
doc/content/apis/fmi/fmigateway/: index.md
doc/content/apis/fmi/fmimcl/: index.md
doc/content/apis/fmi/fmimodelc/: index.md
doc/content/apis/fmi/fmu/: index.md
doc/content/docs/user/envars/fmi/: index.md
doc/content/docs/user/fmi/: _index.md
doc/content/docs/user/fmi/fmigateway/: index.md
doc/content/docs/user/fmi/fmimcl/: index.md
doc/content/docs/user/fmi/fmimodelc/: index.md
doc/content/docs/user/models/fmimcl/: index.md
doc/content/docs/user/models/gatewayfmu/: index.md
doc/content/docs/user/models/modelcfmu/: index.md
doc/content/docs/user/workflows/fmimcl/: index.md
doc/content/docs/user/workflows/gatewayfmu/: index.md  old_index.md
doc/content/docs/user/workflows/modelcfmu/: index.md  script.md  task.md
doc/static/: dse_signalgroup_processing.graphml
doc/yed/: ki_fmigateway.graphml  ki_fmimcl.graphml  ki_fmimodelc.graphml
dse/: CMakeLists.txt  Makefile
dse/examples/: CMakeLists.txt
dse/examples/direct/: CMakeLists.txt  README.md  in_values.csv  model.c  model.yaml  signalgroup.yaml  simulation.yaml
dse/examples/fmimodelc/: CMakeLists.txt  model.c
dse/examples/fmimodelc/data/: model.yaml  simulation.yaml
dse/examples/fmimodelc/fmi2/: modelDescription.xml
dse/examples/fmimodelc/fmi3/: modelDescription.xml
dse/examples/fmu/counter/: CMakeLists.txt  modelDescription.xml
dse/examples/fmu/counter/fmi2/: modelDescription.xml
dse/examples/fmu/counter/fmi3/: modelDescription.xml
dse/examples/fmu/linear/: CMakeLists.txt  linear.c
dse/examples/fmu/linear/fmi2/: modelDescription.xml
dse/examples/fmu/linear/fmi3/: modelDescription.xml
dse/examples/fmu/network/: CMakeLists.txt  network.c
dse/examples/fmu/network/fmi2/: modelDescription.xml
dse/examples/fmu/network/fmi3/: modelDescription.xml
dse/examples/gateway/: CMakeLists.txt  model.c
dse/examples/gateway/data/: model.yaml  signalgroup_target.yaml  stack.yaml  stack_target.yaml
dse/examples/gateway/fmi2/: modelDescription.xml
dse/examples/gateway/fmi3/: modelDescription.xml
dse/examples/gateway/model_router/: model.lua  router.yaml
dse/fmigateway/: CMakeLists.txt  fmigateway.c  fmigateway.h  index.c  parse_fmi.c  parser.c  session.c  session_unix.c  session_win32.c  signal.c
dse/fmimcl/: CMakeLists.txt  Makefile  README.md  engine.c  fmimcl.c  fmimcl.h  model.c  parser.c
dse/fmimcl/adapter/: fmi2mcl.c  fmi2mcl.h
dse/fmimcl/examples/: CMakeLists.txt
dse/fmimcl/examples/fmi2fmu/: CMakeLists.txt  fmi2fmu.c  modelDescription.xml
dse/fmimcl/examples/input/: CMakeLists.txt  model.c
dse/fmimcl/examples/input/data/: model.yaml  simulation.yaml
dse/fmimodelc/: CMakeLists.txt  ascii85.c  clock_gettime.c  env_unix.c  env_win32.c  fmi2fmu.c  fmimodelc.c  fmimodelc.h  runtime.c  signal.c  signal_api_backport.c
dse/fmimodelc/examples/: CMakeLists.txt
dse/fmimodelc/examples/network_fmu/: CMakeLists.txt  fmi2importer.c  modelDescription.xml
dse/fmimodelc/examples/network_fmu/sim/: model.yaml
dse/fmu/: CMakeLists.txt  ascii85.c  fmi2fmu.c  fmi2variable.c  fmi3fmu.c  fmi3variable.c  fmu.c  fmu.h  ncodec.c  signal.c  stream.c  xml.c  xml.h
dse/importer/: CMakeLists.txt  csv.c  importer.c  importer.h  ncodec.c  signal_bus.c  xml.c
extra/tools/fmi/: Makefile  README.md  go.mod  go.sum
extra/tools/fmi/cmd/fmi/: command.go  main.go  main_test.go
extra/tools/fmi/internal/app/generate/: annotate.go  annotate_test.go  directindex.go  directindex_test.go  fmigateway.go  fmimcl.go  fmimcl_test.go  fmimodelc.go  fmimodelc_test.go  (+7 more)
extra/tools/fmi/pkg/fmi/: fmi.go
extra/tools/fmi/pkg/log/: log.go
extra/tools/fmi/pkg/patch/: patch_test.go  signalgroup.go
licenses/boschglobal/automotive-bus-schema/: __url__
licenses/boschglobal/dse.ncodec/: NOTICE  __url__
tests/cmocka/: CMakeLists.txt  Makefile
tests/cmocka/fmigateway/: CMakeLists.txt  __test__.c  test_fmi2.c  test_parser.c
tests/cmocka/fmigateway/data/: model.yaml  model_parser.yaml  stack.yaml  stack_gw_parser.yaml  stack_gw_parser_default.yaml  stack_models_parser.yaml
tests/cmocka/fmigateway/fmi2/: __test__.c  test_fmi2.c  test_fmi2_xml_parsing.c  test_yaml_parsing.c
tests/cmocka/fmigateway/fmi2/data/fmi2/: modelDescription.xml
tests/cmocka/fmigateway/fmi2/data/fmi2/resources/: fmu.yaml  model.yaml  stack_gw_parser.yaml  stack_models_parser.yaml
tests/cmocka/fmigateway/fmi2/data/fmi2_default/: modelDescription.xml
tests/cmocka/fmigateway/fmi2/data/fmi2_legacy/: modelDescription.xml
tests/cmocka/fmigateway/fmi3/: __test__.c  test_fmi3.c  test_fmi3_xml_parsing.c
tests/cmocka/fmigateway/fmi3/data/fmi3/: modelDescription.xml
tests/cmocka/fmigateway/fmi3/data/fmi3_default/: modelDescription.xml
tests/cmocka/fmigateway/fmi3/data/fmi3_legacy/: modelDescription.xml
tests/cmocka/fmimcl/: CMakeLists.txt  __test__.c  test_engine.c  test_fmi2.c  test_mcl.c  test_parser.c
tests/cmocka/fmimcl/data/: fmu.yaml  mcl.yaml  mcl_mock.yaml  parser_sort.yaml  simulation.yaml
tests/cmocka/fmimcl/mock/: mock.c  mock.h
tests/cmocka/fmimcl/mstep/: __test__.c  fmu_mstep.yaml  test_mstep.c
tests/cmocka/fmimodelc/: CMakeLists.txt  __test__.c  test_index.c
tests/cmocka/fmu/: CMakeLists.txt  __test__.c  mock_interface.c  mock_interface.h  test_ascii85.c  test_fmi2fmu.c  test_fmi3fmu.c  test_signals.c  test_variables.c
tests/cmocka/fmu/data/: modelDescription.xml
tests/testscript/e2e/: direct_index.txtar  example_fmu_counter.txtar  example_fmu_linear.txtar  example_fmu_network.txtar  fmigateway_fmi2.txtar  fmigateway_fmi2.txtar.disabled  fmigateway_fmi2_workflow.txtar  fmigateway_fmi3.txtar  fmigateway_fmi3.txtar.disabled  fmimcl_fmu2.txtar  fmimcl_measurement.txtar  fmimodelc_fmi2_network.txtar  fmimodelc_fmi3_network.txtar  fmimodelc_network_fmu.txtar
(+41 files in other folders)
